--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,19 @@ html {
 body {
   margin-bottom: 60px;
   background-image: url("../brickwall.png");
+  font-family: 'Playfair Display', serif;
+}
+
+h3 {
+  font-family: 'Playfair Display', serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+h4 {
+  font-size: 1.6em;
+  font-family: 'Playfair Display', serif;
+  margin-top: 0px;
 }
 
 .container {
