--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,20 @@ body {
   font-family: 'Playfair Display', serif;
 }
 
+.well {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+}
+
+.leftSide {
+  flex-grow: 2;
+}
+
+rightSide {
+  flex-grow: 1;
+}
+
 h3 {
   font-family: 'Playfair Display', serif;
   text-transform: uppercase;
@@ -148,4 +162,13 @@ a {
 @keyframes slide {
 	0% {transform:translateX(-100%);}
 	100% {transform:translateX(100%);}
+}
+
+@media screen and (max-width: 720px){
+
+.well {
+  flex-direction: column;
+  align-items: flex-start;
+}
+
 }
