--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,6 +60,7 @@ h4 {
 
 .panel {
   margin-bottom: 5px;
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, .4);
 }
 
 .panel-title {
@@ -132,18 +133,19 @@ a {
   background-repeat: no-repeat, no-repeat;
   background-size: contain, cover;
   background-position: center, center;
+  box-shadow: 0px 45px 10px rgba(0, 0, 0, .5);
 }
 
 .pageTitle {
   position: relative;
   background-color: black;
-  padding: 3px;
   height: 36px;
+  line-height: 36px;
   color: white;
   text-align: center;
   text-transform: uppercase;
   font-size: 16pt;
-  letter-spacing: 2px;
+  letter-spacing: 3px;
 }
 
 .row {
