--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,7 @@ h3 {
 h4 {
   font-size: 1.6em;
   font-family: 'Playfair Display', serif;
+  font-weight: 700;
   margin-top: 0px;
 }
 
@@ -66,7 +67,7 @@ h4 {
 .panel-title {
   font-size: 16pt;
   color: #fd5b1a;
-  font-weight: bolder;
+  font-weight: 900;
 }
 
 .panel-primary>.panel-heading {
@@ -146,6 +147,7 @@ a {
   text-transform: uppercase;
   font-size: 16pt;
   letter-spacing: 3px;
+  font-weight: 900;
 }
 
 .row {
